examples/type_system/failing/172_self_recursive_unresolved_guard_no_false_positive.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/172_self_recursive_unresolved_guard_no_false_positive.flx
// error[E430]: Any Type Inferred
//
// Could not determine a concrete type for `loop_unknown` at the public function signature. Inferred type: `(Int) -> _`.
//
//   examples/type_system/failing/172_self_recursive_unresolved_guard_no_false_positive.flx:36:1
//    |
// 36 | fn loop_unknown(n) {
//    | ^^^^^^^^^^^^^^^^^^
//
// Hint:
//   Add a type annotation: e.g. `fn loop_unknown(x: Int, y: Int): Int`
//
//
// error[E004]: Undefined Variable
//
// I can't find a value named `mystery_value`.
//
//   examples/type_system/failing/172_self_recursive_unresolved_guard_no_false_positive.flx:38:9
//    |
// 38 |         mystery_value
//    |         ^^^^^^^^^^^^^
//
// Hint:
//   Define it first: let mystery_value = ...;
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E004
// expect-error: E430

fn loop_unknown(n) {
    if n == 0 {
        mystery_value
    } else {
        loop_unknown(n - 1)
    }
}

fn main() -> Unit {
    let _x = loop_unknown(3)
    let _y = 1
}
